# xdefi-graphql

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
abis/: erc20.json
src/: cache.rs  context.rs  errors.rs  main.rs
src/external_api/: moralis.rs
src/routes/: ping.rs
src/schemas/: schema.rs
src/validates/: env.rs  is_eth_address.rs  mod.rs
src/web3/: get_decimals.rs  get_native_balance.rs  get_token_balance.rs  mod.rs  utils.rs
src/web3/models/: balance.rs  decimals.rs  mod.rs
