[package]
name = "antix_graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-lab = "0.19.1"
env_logger = "0.10.0"
juniper = "0.15.11"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"]}
thiserror = "1.0"
regex = "1.5"
web3 = "0.17.0"
dotenv = "0.15.0"